Clicking on a question will make it pop out on a modal

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 FinalProject-1-Santos-Kirby Ezekiel.zip
 /FinalProject-1-Santos-Kirby Ezekiel
+FinalProject-2-Santos-Kirby Ezekiel.zip
+/FinalProject-2-Santos-Kirby Ezekiel
+Lab6_Grp19_COA.psd
