Added animations and audio for pass 4.

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ FinalProject-1-Santos-Kirby Ezekiel.zip
 /FinalProject-1-Santos-Kirby Ezekiel
 FinalProject-2-Santos-Kirby Ezekiel.zip
 /FinalProject-2-Santos-Kirby Ezekiel
+FinalProject-3-Santos-Kirby Ezekiel.zip
+/FinalProject-3-Santos-Kirby Ezekiel
 Lab6_Grp19_COA.psd
