--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 FinalProject-1-Santos-Kirby Ezekiel.zip
 FinalProject-2-Santos-Kirby Ezekiel.zip
 FinalProject-3-Santos-Kirby Ezekiel.zip
+FinalProject-4-Santos-Kirby Ezekiel.zip
 /FinalProject-1-Santos-Kirby Ezekiel
 /FinalProject-2-Santos-Kirby Ezekiel
 /FinalProject-3-Santos-Kirby Ezekiel
+/FinalProject-4-Santos-Kirby Ezekiel
 Lab6_Grp19_COA.psd
